--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!doctype html>
 <!-- Marta Carretero Pensado y Adriana Rodríguez Cortizo-->
 <html lang="es">
-
 <head>
 	<meta charset="UTF-8">
 	<title>Home</title>
 </head>
-
 <body bgcolor="#ADD8E6">
 	<font face="lora">
 		<h1 align=center> ODS </h1>
@@ -26,8 +24,7 @@
 		<p id="primerp">
 			<font size="4"> Las ODS son <b><u>17 objetivos globales</u></b> interconectados, establecidos por la <b>
 					ONU</b>, que deberían cumplirse antes del <u>2030</u> para mejorar nuestro planeta y el estilo de
-				vida de todos. Pincha <a
-					href="https://www.un.org/sustainabledevelopment/es/objetivos-de-desarrollo-sostenible/">aquí</a> si
+				vida de todos. Pincha <a href="https://www.un.org/sustainabledevelopment/es/objetivos-de-desarrollo-sostenible/">aquí</a> si
 				quieres saber más.</font>
 		</p>
 		<p><b>Los 17 objetivos son:</b></p>
@@ -55,8 +52,7 @@
 			<font size="4"> Hemos trabajado con el <u>objetivo 15</u> (<i>vida de ecosistemas terrestres</i>). Las metas
 				de este objetivo son: gestionar sosteniblemente los bosques, luchar contra la desertificación, detener e
 				invertir la degradación de las tierras y detener la pérdida de biodiversidad. En nuestro equipo nos
-				centramos en la lucha contra la desertificación.</font>
-		</p>
+				centramos en la lucha contra la desertificación.</font></p>
 		<h4 id="tercerh4"> Imágenes y vídeo </h4>
 		<h5> Galería </h5>
 		<table align="center" width="65%">
@@ -80,7 +76,5 @@
 		<br>
 		<button><a href="datos.html"> Datos </a></button>
 		<button><a href="#top">Arriba</a></button>
-
 </body>
-
 </html>
