--- a/datos.html
+++ b/datos.html
@@ -117,7 +117,7 @@
 		<p> En conclusión, teniendo en cuenta los resultados anteriores se puede observar que hoy en día los alumnos de Manuel Peleteiro de 4ºESO realizan un pequeño esfuerzo para ayudar al medio ambiente. Probablemente para incrementar el número de alumnos que se preocupan por el planeta Tierra, se podrían llevar a cabo algunas actividades escolares relacionadas con este ODS. </p>
 		<a href="#Índice"><button> Volver al índice </button></a>
 		<br><br>
-
+		<button><a href="index.html"> Datos </a></button>
 		<h7> Muchas Gracias </h7>
 	</body>
 </html>
