--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<br>
 		<h3> Índice </h3>
 		<nav>
-			<ul type="square">
+			<ul type="circle">
 				<li><a href="#primerp">¿Qué son?</a></li>
 				<li><a href="#segundop">Nuestra ODS</a></li>
 				<li><a href="#tercerh4">Imágenes y vídeo</a></li>
@@ -60,9 +60,7 @@
 				<td bgcolor="#0385b0" colspan="3"> Imágenes </td>
 			</tr>
 			<tr>
-				<td bgcolor="white">
-					<h6> ODS 15 </h6>
-				</td>
+				<td bgcolor="white"><img src= "https://drive.google.com/drive/folders/1K2PVqQ75o2pLNG-pYaxypW9nyQ42ttuk" alt= "Imágen ODS15"><h6> ODS 15 </h6></td>
 				<td bgcolor="white"> imágen 2 </td>
 				<td bgcolor="white"> imágen 3 </td>
 			</tr>
